fixed up spacing, added card links

--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,16 @@ p {
 }
 
 div.about-me {
-    padding: 10px 0px;
+    padding: 0px 0px;
+}
+
+.bio p
+{
+    margin-top: 0px;
 }
 
 .portfolio {
-    width: 75%;
+    width: 60%;
     margin: auto;
     display: grid;
     grid-template-columns: : 1fr 1fr 1fr 1fr;
@@ -109,7 +114,7 @@ div.about-me {
 }
 
 .header {
-    width: 75%;
+    width: 60%;
     margin: auto;
 }
 
@@ -118,7 +123,7 @@ div.about-me {
 }
 
 .about-me {
-    width: 75%;
+    width: 60%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -127,7 +132,8 @@ div.about-me {
 }
 
 .bio {
-    width: 75%;
+    width: 60%;
+    line-height: 1.5;
 }
 
 .text {
@@ -148,6 +154,15 @@ div.about-me {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 250px;
+    text-align: center;
+    position: fixed;
+   /* center the element */
+   right: 0;
+   left: 0;
+   margin-right: auto;
+   margin-left: auto;
+   /* give it dimensions */
 }
 
 .fa-linkedin:hover {
